src/objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Can_Delete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Types_of_Requirement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <description>Requirement for service application evaluation procecss</description>
        <inlineHelpText>Requirement for service application evaluation procecss</inlineHelpText>
        <label>Requirement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Identification</fullName>
                </value>
                <value>
                    <fullName>Request for Electric Service Documents</fullName>
                </value>
                <value>
                    <fullName>Proof of Occupancy</fullName>
                </value>
                <value>
                    <fullName>Disconnection Waiver/Warranty</fullName>
                    <label>Customer’s Service Application Warranty</label>
                </value>
                <value>
                    <fullName>Electric Load Documents</fullName>
                </value>
                <value>
                    <fullName>Certificate of Final Electrical Inspection</fullName>
                </value>
                <value>
                    <fullName>Energization Date Agreement Form</fullName>
                </value>
                <value>
                    <fullName>Right of Way Grant</fullName>
                </value>
                <value>
                    <fullName>Undertaking to Submit Pending Document/s</fullName>
                </value>
                <value>
                    <fullName>Tax Identification Documents</fullName>
                </value>
                <value>
                    <fullName>Authorization Documents</fullName>
                </value>
                <value>
                    <fullName>Documents for Correction of Name</fullName>
                </value>
                <value>
                    <fullName>Documents for Special Discounts and Tax Privileges</fullName>
                </value>
                <value>
                    <fullName>RES Document Requirements</fullName>
                </value>
                <value>
                    <fullName>Service Application Requirements</fullName>
                </value>
                <value>
                    <fullName>Service Level Requirement</fullName>
                </value>
                <value>
                    <fullName>Transaction Level Requirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <description>Requirement for service application evaluation procecss</description>
        <inlineHelpText>Requirement for service application evaluation procecss</inlineHelpText>
        <label>Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Load Requirement</fullName>
                </value>
                <value>
                    <fullName>Proof of Identification</fullName>
                </value>
                <value>
                    <fullName>Proof of Valid Occupancy</fullName>
                </value>
                <value>
                    <fullName>Energization Requirement</fullName>
                </value>
                <value>
                    <fullName>Tax Identification Document</fullName>
                </value>
                <value>
                    <fullName>Representative Requirements</fullName>
                </value>
                <value>
                    <fullName>Other Requirements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of supporting document(s)</description>
        <inlineHelpText>Status of supporting document(s)</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Document__c</fullName>
        <description>Specific supporting document required for service application evaluation process</description>
        <inlineHelpText>Specific supporting document required for service application evaluation process</inlineHelpText>
        <label>Supporting Document</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Requirement_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>List of Electrical Loads</fullName>
                </value>
                <value>
                    <fullName>Electrical Plan</fullName>
                </value>
                <value>
                    <fullName>Barangay Certificate</fullName>
                </value>
                <value>
                    <fullName>Voter’s ID</fullName>
                </value>
                <value>
                    <fullName>Driver’s License</fullName>
                </value>
                <value>
                    <fullName>Firearm’s License</fullName>
                </value>
                <value>
                    <fullName>GSIS ID</fullName>
                </value>
                <value>
                    <fullName>IBP ID</fullName>
                </value>
                <value>
                    <fullName>NBI Clearance</fullName>
                </value>
                <value>
                    <fullName>Philippine Passport</fullName>
                </value>
                <value>
                    <fullName>PhilHealth ID</fullName>
                </value>
                <value>
                    <fullName>POEA Artist Record Book</fullName>
                </value>
                <value>
                    <fullName>Police Clearance</fullName>
                </value>
                <value>
                    <fullName>Postal ID</fullName>
                </value>
                <value>
                    <fullName>PRC ID</fullName>
                </value>
                <value>
                    <fullName>Senior Citizen ID</fullName>
                </value>
                <value>
                    <fullName>SSS ID</fullName>
                </value>
                <value>
                    <fullName>TIN ID</fullName>
                </value>
                <value>
                    <fullName>Unified Multipurpose ID</fullName>
                </value>
                <value>
                    <fullName>Other Government-issued ID</fullName>
                </value>
                <value>
                    <fullName>Articles of Partnership &amp; SEC Registration</fullName>
                </value>
                <value>
                    <fullName>GIS &amp; SEC Registration</fullName>
                </value>
                <value>
                    <fullName>Articles of Cooperation, CDA &amp; GIS</fullName>
                </value>
                <value>
                    <fullName>HLURB Certificate &amp; HOA List of Officers</fullName>
                </value>
                <value>
                    <fullName>Government-issued Certificate of Award</fullName>
                </value>
                <value>
                    <fullName>Certificate of Sale</fullName>
                </value>
                <value>
                    <fullName>Condominium Certificate of Title</fullName>
                </value>
                <value>
                    <fullName>Contract to Sell</fullName>
                </value>
                <value>
                    <fullName>Deed of Conditional Sale</fullName>
                </value>
                <value>
                    <fullName>Deed of Donation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Requirement_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Type of Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CXE_Max_Requirement_Count_Validate</fullName>
        <active>true</active>
        <description>Validate the maximum count of Requirement per Case</description>
        <errorConditionFormula>AND(
ISNEW(), 
Case__r.Number_Of_Type_Reqs__c = 10
)</errorConditionFormula>
        <errorMessage>You can only add 10 Requirements per case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Status_Deferred_Validate_User</fullName>
        <active>true</active>
        <description>Restrict update of deferred status for G4 and above users only</description>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(Status__c, &apos;Deferred&apos;),
NOT(CONTAINS($Profile.Name, &apos;G4&apos;)), 
NOT(CONTAINS($Profile.Name, &apos;G3&apos;)),
NOT(CONTAINS($Profile.Name, &apos;G2&apos;)),
NOT(CONTAINS($Profile.Name, &apos;G1&apos;)),
NOT(CONTAINS($Profile.Name, &apos;System Administrator&apos;))
)</errorConditionFormula>
        <errorMessage>Only G4 to G1 Users can change Status to &quot;Deferred&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Documents_Required</fullName>
        <active>false</active>
        <description>Some Requirement Type requires Supporting Document</description>
        <errorConditionFormula>(ISPICKVAL( Requirement_Type__c , &quot;Proof of Identification&quot;) || ISPICKVAL( Requirement_Type__c , &quot;Proof of Occupancy&quot;) || ISPICKVAL( Requirement_Type__c , &quot;Disconnection Waiver/Warranty&quot;) || ISPICKVAL( Requirement_Type__c , &quot;Certificate of Final Electrical Inspection&quot;) || ISPICKVAL( Requirement_Type__c , &quot;Energization Date Agreement Form&quot;) || ISPICKVAL( Requirement_Type__c , &quot;Right of Way Grant&quot;) || ISPICKVAL( Requirement_Type__c , &quot;Undertaking to Submit Pending Document/s&quot;)) &amp;&amp; ISBLANK(TEXT(Supporting_Document__c))</errorConditionFormula>
        <errorDisplayField>Supporting_Document__c</errorDisplayField>
        <errorMessage>Please Select a Supporting Document.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Only_10_records_Per_Record</fullName>
        <active>false</active>
        <errorConditionFormula>Case__r.Number_Of_Type_Reqs__c = 10</errorConditionFormula>
        <errorMessage>You can only add 10 type of requirements per case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_allow_to_change_back_to_pending</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsCHANGED( Status__c ),
text(Status__c) = &apos;Pending&apos;,
 TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;Pending&apos;,
not(isblank(PRIORVALUE(Status__c)))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Not allowed to updated status after Pending</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_G4_to_G2_Can_Deffer</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ischanged( Status__c ),
ispickval (Status__c,&apos;Deferred&apos;),
not( contains($UserRole.Name,&apos;G4&apos;)), 
not( contains($UserRole.Name,&apos;G3&apos;)),
not( contains($UserRole.Name,&apos;G2&apos;)),
not( $Profile.Name =&apos;System Administrator&apos;)

)</errorConditionFormula>
        <errorMessage>Only G4 to G2 Users can change to &quot;Deferred&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remarks_Required_When_Type_is_CFEI</fullName>
        <active>true</active>
        <description>If the Requirement Type is CFEI (Certificate of Final Electrical Inspection) and status is &quot;Submitted&quot;, then the remarks should not be empty.</description>
        <errorConditionFormula>AND(ISPICKVAL(Requirement_Type__c, &quot;Certificate of Final Electrical Inspection&quot;), ISPICKVAL( Status__c , &quot;Submitted&quot;), ISBLANK( Remarks__c ) )</errorConditionFormula>
        <errorMessage>Indicate the CFEI # on the Remarks field when updating the requirement to Submitted.</errorMessage>
    </validationRules>
</CustomObject>